# ModelingAndSolvingTheBPCVRP

./: .gitignore  README.md
Scripts/: .gitignore  README.md  pyproject.toml  requirements.txt
Scripts/bpcvrp_testing/: data_analysis.ipynb  main.py  requirements.txt
Scripts/bpcvrp_testing/experiments/: batch_runner.py  sdvrp_metrics.py
Scripts/bpcvrp_testing/generators/: bpcsdvrp_generator.py  bpcvrp_generator.py  bpp_generator.py  sdvrp_generator.py  vrp_generator.py
Scripts/bpcvrp_testing/instances/: bpcsdvrp_instance.py  bpcvrp_instance.py  bpp_instance.py  grouped_vrp_instance.py  sdvrp_instance.py  vrp_instance.py
Scripts/bpcvrp_testing/io/: experiment_utils.py  io_utils.py
Scripts/bpcvrp_testing/playground/: playground_bpcvrp.py  playground_minizinc_bpcsdvrp.py  playground_minizinc_bpcvrp.py  playground_minizinc_bpcvrp_grouped_heuristic.py  playground_minizinc_sdvrp.py  playground_minizinc_vrp_bpp.py  playground_ortools_bpp_vrp.py  playground_vrp_bpp.py
Scripts/bpcvrp_testing/solvers/: bpcsdvrp_sequential.py  bpcvrp_grouped_heuristic.py  minizinc_runner.py  ortools_bpp_runner.py  ortools_vrp_runner.py
Scripts/data/bpcsdvrp/: bpcsdvrp_uniform_n2_seed2042.dzn  bpcsdvrp_uniform_n2_seed2043.dzn  bpcsdvrp_uniform_n2_seed2045.dzn  bpcsdvrp_uniform_n2_seed2046.dzn
Scripts/data/bpcsdvrp_03/: bpcsdvrp_uniform_n2_seed2042.dzn  bpcsdvrp_uniform_n2_seed2043.dzn  (+5 more)
Scripts/models/: bpcvrp_001.mzn  bpcvrp_002_split_deliveries.mzn  bpcvrp_003_grouped_sd.mzn  bpp_002.mzn  vrp_002.mzn  vrp_003_split_delivery.mzn
Scripts/playground/: playground_vrp_bpp.py
(+1074 files in other folders)
